[gd_scene load_steps=4 format=3 uid="uid://b85esmyhgliu4"]

[ext_resource type="Script" uid="uid://crevjg4glokyo" path="res://Scripts/Components/FeaturedSong.gd" id="1"]
[ext_resource type="Script" uid="uid://gd6jeeur4qt0" path="res://Scripts/Components/AutoScrollLabel.gd" id="1_auto_scroll"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.2, 0.15, 0.25, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.3, 0.5, 0.5)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 4
shadow_offset = Vector2(2, 2)

[node name="FeaturedSong" type="PanelContainer"]
custom_minimum_size = Vector2(300, 120)
offset_right = 465.0
offset_bottom = 132.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ContentRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="AlbumArtContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/ContentRow"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="AlbumArtBackground" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentRow/AlbumArtContainer"]
layout_mode = 2
color = Color(0.15, 0.15, 0.15, 1)

[node name="AlbumArt" type="TextureRect" parent="MarginContainer/VBoxContainer/ContentRow/AlbumArtContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="SongInfoContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="FeaturedLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentRow/SongInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "FEATURED SONG"

[node name="SongTitle" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentRow/SongInfoContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 0
script = ExtResource("1_auto_scroll")

[node name="Artist" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentRow/SongInfoContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 0
script = ExtResource("1_auto_scroll")

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/ContentRow/SongInfoContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VisualizerContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ContentRow"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 3
alignment = 1

[node name="Bar1" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentRow/VisualizerContainer"]
custom_minimum_size = Vector2(6, 3)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.6, 0.4, 0.8, 0.8)

[node name="Bar2" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentRow/VisualizerContainer"]
custom_minimum_size = Vector2(6, 3)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.6, 0.4, 0.8, 0.8)

[node name="Bar3" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentRow/VisualizerContainer"]
custom_minimum_size = Vector2(6, 3)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.6, 0.4, 0.8, 0.8)

[node name="Bar4" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentRow/VisualizerContainer"]
custom_minimum_size = Vector2(6, 3)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.6, 0.4, 0.8, 0.8)

[node name="Bar5" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentRow/VisualizerContainer"]
custom_minimum_size = Vector2(6, 3)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.6, 0.4, 0.8, 0.8)

[node name="Bar6" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentRow/VisualizerContainer"]
custom_minimum_size = Vector2(6, 3)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.6, 0.4, 0.8, 0.8)

[node name="Bar7" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentRow/VisualizerContainer"]
custom_minimum_size = Vector2(6, 3)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.6, 0.4, 0.8, 0.8)

[node name="Bar8" type="ColorRect" parent="MarginContainer/VBoxContainer/ContentRow/VisualizerContainer"]
custom_minimum_size = Vector2(6, 3)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.6, 0.4, 0.8, 0.8)

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 11
text = "00:00 / 00:00"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClickHint" type="Label" parent="MarginContainer/VBoxContainer/BottomRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 10
text = "Click to select"

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
